samples/_failures_safe/1761152189_ea158d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e4c85938.c: In function ‘main’:
./samples/SAFE/__tmp_e4c85938.c:148:9: error: expected declaration or statement at end of input
  148 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_e4c85938.c:148:9: error: expected declaration or statement at end of input
